--- a/sources/requirements.txt
+++ b/sources/requirements.txt
@@ -1,2 +1,53 @@
+altgraph==0.17.3
+anyio==3.7.0
+APScheduler==3.10.1
+bcrypt==4.0.1
+beanie==1.20.0
+black==23.3.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+confluent-kafka==2.1.1
+dnspython==2.3.0
+email-validator==2.0.0.post2
+fastapi==0.99.1
+fastapi-mqtt==1.1.1
+future==0.18.3
+gmqtt==0.6.12
+h11==0.14.0
+httpcore==0.17.2
+httpx==0.24.1
+idna==3.4
+iniconfig==2.0.0
+iso8601==2.0.0
+lazy-model==0.0.5
+mongomock==4.1.2
+mongomock-motor==0.0.20
+motor==3.2.0
+mypy-extensions==1.0.0
+packaging==23.1
+passlib==1.7.4
+pathspec==0.11.1
+platformdirs==3.8.0
+pluggy==1.2.0
+pydantic==1.10.10
+pyinstaller==5.13.0
+pyinstaller-hooks-contrib==2023.5
+PyJWT==2.7.0
+pymongo==4.4.0
 pyserial==3.5
-pymongo==3.9.0
+pytest==7.4.0
+pytest-mock==3.11.1
+python-dotenv==1.0.0
+pytz==2023.3
+PyYAML==6.0
+requests==2.31.0
+sentinels==1.0.0
+six==1.16.0
+sniffio==1.3.0
+starlette==0.27.0
+toml==0.10.2
+typing_extensions==4.7.1
+tzlocal==5.0.1
+urllib3==2.0.3
+uvicorn==0.22.0
